--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/dm_mono_light</item>
         <item>@font/dm_serif_display</item>
+        <item>@font/prompt_semibold</item>
+        <item>@font/prompt_thin</item>
         <item>@font/purple_purse</item>
     </array>
 </resources>
