--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -203,7 +203,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_btn"
         android:fontFamily="@font/purple_purse"
-        android:onClick="flashlight"
+        android:onClick="toggleTorch"
         android:paddingTop="115dp"
         android:text="Flashlight"
         android:textColor="#CED0CE"
@@ -239,6 +239,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/flashlight_logo"
+        android:onClick="toggleTorch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.189"
