--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_btn"
         android:fontFamily="@font/purple_purse"
-        android:onClick="create_acc"
+        android:onClick="instructions"
         android:paddingTop="115dp"
         android:text="Instructions"
         android:textColor="#CED0CE"
