Added Edit Emergency services Page and fixed some minor errors

--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -108,7 +108,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_btn"
         android:fontFamily="@font/purple_purse"
-        android:onClick="edit_sos_message"
+        android:onClick="Editsos"
         android:paddingTop="115dp"
         android:text="Edit SOS Message"
         android:textColor="#CED0CE"
@@ -125,6 +125,7 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@drawable/edid_sos_logo"
+        android:onClick="Editsos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.203"
