Added Emergency Contact Page and made some minor changes

--- a/app/src/main/res/layout/emergencyservices.xml
+++ b/app/src/main/res/layout/emergencyservices.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main6"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main6"
     android:background="@drawable/page_bg_1">
 
     <ListView
-        android:layout_width="285dp"
         android:id="@+id/listView"
+        android:layout_width="285dp"
         android:layout_height="594dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,12 +25,10 @@
         android:text="Emergency Services"
         android:textColor="@color/white"
         android:textSize="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.006" />
+        tools:layout_editor_absoluteY="16dp" />
 
     <Button
         android:id="@+id/buttonHome"
