--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_btn"
         android:fontFamily="@font/purple_purse"
-        android:onClick="emergency_contact"
+        android:onClick="EmergencyContacts"
         android:paddingTop="115dp"
         android:text="Emergency Contact"
         android:textColor="#CED0CE"
@@ -62,6 +62,7 @@
         android:id="@+id/ContactButton"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:onClick="EmergencyContacts"
         android:background="@drawable/contact_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +161,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_btn"
         android:fontFamily="@font/purple_purse"
-        android:onClick="emergency_services"
+        android:onClick="EmergencyServices"
         android:paddingTop="115dp"
         android:text="Emergency Services"
         android:textColor="#CED0CE"
@@ -176,6 +177,7 @@
         android:id="@+id/imageViewEmergencyService"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:onClick="EmergencyServices"
         android:background="@drawable/emergency_services_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
