Revamped the UI and fixed a few errors.

--- a/app/src/main/res/layout/emergencycontacts.xml
+++ b/app/src/main/res/layout/emergencycontacts.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/page_bg_2">
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textView2"
@@ -27,20 +27,21 @@
         android:contentDescription="Add Contact"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.852"
+        app:layout_constraintHorizontal_bias="0.941"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.882" />
+        app:layout_constraintVertical_bias="0.906" />
 
     <ListView
+        android:id="@+id/contactListView"
         android:layout_width="341dp"
         android:layout_height="525dp"
-        android:id="@+id/contactListView"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.469" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
