--- a/app/src/main/res/drawable/red_border.xml
+++ b/app/src/main/res/drawable/red_border.xml
@@ -1,7 +1,25 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
-    <stroke
-        android:width="2dp"
-        android:color="#FF0000" />
-    <corners android:radius="8dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <gradient
+                android:startColor="#40262424"
+                android:endColor="#40121212"
+                android:angle="135" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <solid android:color="#20FFFFFF" />
+            <stroke
+                android:width="2dp"
+                android:color="#B3B3B3" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <solid android:color="#08FFFFFF" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+</layer-list>
