--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/dm_serif_display"
         android:text="Login"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +47,11 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColorHint="#493E3E"
-        android:textColor="#000000"
+        android:background="@drawable/edittexttheme"
+        android:fontFamily="@font/dm_sans_semibold"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
@@ -66,8 +69,11 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:textColorHint="#493E3E"
-        android:textColor="#000000"
+        android:background="@drawable/edittexttheme"
+        android:fontFamily="@font/dm_sans_semibold"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
@@ -82,7 +88,7 @@
         android:fontFamily="@font/dm_serif_display"
         android:paddingRight="12dp"
         android:text="Forgot Password?"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +102,7 @@
         android:layout_width="121dp"
         android:layout_height="47dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/login_button_background"
+        android:background="@drawable/login_button"
         android:fontFamily="@font/purple_purse"
         android:onClick="login"
         android:paddingStart="32dp"
@@ -135,7 +141,7 @@
         android:fontFamily="@font/dm_serif_display"
         android:paddingRight="12dp"
         android:text="Dont have an Account?"
-        android:textColor="#493E3E"
+        android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -152,10 +158,10 @@
         android:src="@drawable/twitter_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv3"
-        app:layout_constraintVertical_bias="0.553" />
+        app:layout_constraintVertical_bias="0.589" />
 
     <ImageView
         android:layout_width="55dp"
@@ -165,10 +171,10 @@
         android:src="@drawable/google_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.213"
+        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv3"
-        app:layout_constraintVertical_bias="0.043" />
+        app:layout_constraintVertical_bias="0.156" />
 
     <ImageView
         android:layout_width="55dp"
