--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/sign_up"
+    android:background="@drawable/create_acc_bg"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="-25dp">
 
@@ -13,9 +13,9 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Create Account"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,11 +72,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:background="@drawable/edittexttheme"
+        android:fontFamily="@font/dm_sans_semibold"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:hint="Full Name"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:textColor="#000000"
-        android:textColorHint="#493E3E"
         app:layout_constraintBottom_toTopOf="@+id/emailInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -91,11 +94,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:background="@drawable/edittexttheme"
+        android:fontFamily="@font/dm_sans_semibold"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:textColor="#000000"
-        android:textColorHint="#493E3E"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/PasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -110,11 +116,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:background="@drawable/edittexttheme"
+        android:fontFamily="@font/dm_sans_semibold"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColor="#000000"
-        android:textColorHint="#493E3E"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/cfmPasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -129,11 +138,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:background="@drawable/edittexttheme"
+        android:fontFamily="@font/dm_sans_semibold"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColor="#000000"
-        android:textColorHint="#493E3E"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -146,8 +158,8 @@
         android:layout_width="147dp"
         android:layout_height="51dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/login_button_background"
-        android:fontFamily="@font/purple_purse"
+        android:background="@drawable/login_button"
+        android:fontFamily="@font/dm_sans_semibold"
         android:onClick="create_acc"
         android:paddingStart="32dp"
         android:paddingTop="12dp"
@@ -185,7 +197,7 @@
         android:fontFamily="@font/dm_serif_display"
         android:paddingRight="12dp"
         android:text="Already have an account?"
-        android:textColor="#493E3E"
+        android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
