--- a/app/src/main/res/layout/editsos.xml
+++ b/app/src/main/res/layout/editsos.xml
@@ -1,10 +1,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/main5"
-    android:background="@drawable/page_bg_1"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textView2"
@@ -20,58 +20,46 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.021" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toBottomOf="@id/textView2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.1">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="This message along with your current location will be sent to your emergency contacts when you press the SOS button"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            android:background="@drawable/red_border" />
-    </androidx.cardview.widget.CardView>
-
     <EditText
         android:id="@+id/editTextSOSMessage"
-        android:layout_width="322dp"
-        android:layout_height="172dp"
-        android:layout_margin="16dp"
+        android:layout_width="359dp"
+        android:layout_height="126dp"
         android:background="@drawable/red_border"
         android:gravity="top"
         android:inputType="textMultiLine"
         android:minLines="4"
         android:padding="16dp"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/buttonSaveSOSMessage"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView2"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.43" />
 
     <Button
         android:id="@+id/buttonSaveSOSMessage"
         android:layout_width="146dp"
         android:layout_height="47dp"
-        android:background="@drawable/menu_btn"
+        android:background="@drawable/button_background"
         android:text="Save SOS Message"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextSOSMessage"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.798" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/red_border"
+        android:padding="16dp"
+        android:text="This message along with your current location will be sent to your emergency contacts when you press the SOS button"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="104dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
