--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -43,7 +43,7 @@
         android:fontFamily="@font/dm_mono_light"
         android:text="PRESS THE BUTTON IN CASE
 OF EMERGENCY"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -53,10 +53,10 @@ OF EMERGENCY"
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/menuButton"
-        android:layout_width="279dp"
-        android:layout_height="71dp"
+        android:layout_width="250dp"
+        android:layout_height="58dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/login_button_background"
+        android:background="@drawable/button_background"
         android:fontFamily="@font/purple_purse"
         android:onClick="menu"
         android:paddingStart="32dp"
