--- a/app/src/main/res/layout/popup_add_contact.xml
+++ b/app/src/main/res/layout/popup_add_contact.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Emergency Contact"
+        android:fontFamily="@font/dm_sans_black"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_gravity="center" />
@@ -18,6 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name"
+        android:padding="15dp"
+        android:textAlignment="center"
+        android:fontFamily="@font/dm_sans_black"
+        android:background="@drawable/edittexttheme"
         android:inputType="textPersonName"
         android:layout_marginTop="16dp" />
 
@@ -26,6 +31,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Number"
+        android:padding="15dp"
+        android:textAlignment="center"
+        android:fontFamily="@font/dm_sans_black"
+        android:background="@drawable/edittexttheme"
         android:inputType="phone"
         android:layout_marginTop="8dp" />
 
@@ -34,6 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:background="@drawable/login_button"
+        android:textColor="@color/white"
         android:layout_gravity="center"
         android:layout_marginTop="16dp" />
 </LinearLayout>
