--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/dm_mono_light</item>
+        <item>@font/dm_sans_black</item>
+        <item>@font/dm_sans_semibold</item>
         <item>@font/dm_serif_display</item>
         <item>@font/prompt_semibold</item>
         <item>@font/prompt_thin</item>
