--- a/app/src/main/res/layout/emergencycontacts.xml
+++ b/app/src/main/res/layout/emergencycontacts.xml
@@ -22,9 +22,10 @@
 
     <Button
         android:id="@+id/addContactButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
         android:contentDescription="Add Contact"
+        android:background="@drawable/add_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.941"
