--- a/app/src/main/res/layout/editsos.xml
+++ b/app/src/main/res/layout/editsos.xml
@@ -13,12 +13,10 @@
         android:text="SOS MESSAGE"
         android:textColor="@color/white"
         android:textSize="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.585"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.021" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextSOSMessage"
