--- a/app/src/main/res/layout/instructions.xml
+++ b/app/src/main/res/layout/instructions.xml
@@ -14,13 +14,10 @@
         android:text="INSTRUCTIONS"
         android:textColor="@color/white"
         android:textSize="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.021" />
-
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
