--- a/app/src/main/res/layout/popup_add_contact.xml
+++ b/app/src/main/res/layout/popup_add_contact.xml
@@ -38,7 +38,7 @@
         android:inputType="phone"
         android:layout_marginTop="8dp" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveContactButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
