--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -104,6 +104,7 @@
         android:id="@+id/MedicationsButton"
         android:layout_width="118dp"
         android:layout_height="119dp"
+        android:onClick="Medication"
         android:background="@drawable/transparent_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
