--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -79,6 +79,7 @@
         android:id="@+id/EmergencyLocationButton"
         android:layout_width="116dp"
         android:layout_height="117dp"
+        android:onClick="EmergencyLocation"
         android:background="@drawable/transparent_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
