--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -44,6 +44,7 @@
         android:layout_marginBottom="112dp"
         android:background="@drawable/circular_background"
         android:src="@drawable/google_icon"
+        android:id="@+id/imageViewGoogle"
         app:layout_constraintBottom_toTopOf="@+id/tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.213"
