Fixed UI inconsistencies

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Please sign in to continue"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -26,16 +26,16 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Login"
         android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.195" />
+        app:layout_constraintVertical_bias="0.196" />
 
     <EditText
         android:id="@+id/PasswordInput"
@@ -85,7 +85,7 @@
         android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:paddingRight="12dp"
         android:text="Forgot Password?"
         android:textColor="@color/white"
@@ -103,7 +103,7 @@
         android:layout_height="47dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/login_button"
-        android:fontFamily="@font/purple_purse"
+        android:fontFamily="@font/dm_sans_black"
         android:onClick="login"
         android:paddingStart="32dp"
         android:paddingTop="12dp"
@@ -122,7 +122,7 @@
         android:id="@+id/tv4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:paddingRight="12dp"
         android:text="Sign Up"
         android:textColor="#CC1111"
@@ -138,14 +138,14 @@
         android:id="@+id/tv3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:paddingRight="12dp"
         android:text="Dont have an Account?"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintHorizontal_bias="0.255"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.614" />
