--- a/app/src/main/res/layout/emergencycontacts.xml
+++ b/app/src/main/res/layout/emergencycontacts.xml
@@ -11,21 +11,26 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/dm_sans_semibold"
         android:text="EMERGENCY CONTACTS"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.583"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042" />
 
     <Button
         android:id="@+id/addContactButton"
         android:layout_width="67dp"
         android:layout_height="67dp"
-        android:contentDescription="Add Contact"
         android:background="@drawable/add_bg"
+        android:contentDescription="Add Contact"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.941"
