--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -160,7 +160,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/login_button"
-        android:fontFamily="@font/dm_sans_semibold"
+        android:fontFamily="@font/dm_sans_black"
         android:onClick="create_acc"
         android:paddingStart="32dp"
         android:paddingTop="12dp"
@@ -179,7 +179,7 @@
         android:id="@+id/tvp1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:paddingRight="12dp"
         android:text="Sign In"
         android:textColor="#000000"
@@ -195,14 +195,14 @@
         android:id="@+id/tvp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_serif_display"
+        android:fontFamily="@font/dm_sans_black"
         android:paddingRight="12dp"
         android:text="Already have an account?"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.311"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
