--- a/app/src/main/res/layout/editsos.xml
+++ b/app/src/main/res/layout/editsos.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="SOS MESSAGE"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="28sp"
+        android:fontFamily="@font/dm_sans_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -31,6 +32,7 @@
         android:padding="16dp"
         android:scrollbars="vertical"
         android:textColor="@android:color/white"
+        android:fontFamily="@font/dm_sans_semibold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -44,6 +46,7 @@
         android:layout_height="47dp"
         android:background="@drawable/button_background"
         android:text="Save SOS Message"
+        android:fontFamily="@font/dm_sans_black"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +62,7 @@
         android:text="This message along with your current location will be sent to your emergency contacts when you press the SOS button"
         android:textColor="@android:color/white"
         android:textSize="14sp"
+        android:fontFamily="@font/dm_sans_semibold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
