--- a/app/src/main/res/layout/emergency_location.xml
+++ b/app/src/main/res/layout/emergency_location.xml
@@ -13,9 +13,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Emergency Locations"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
         android:padding="12dp"
         android:background="@drawable/button_background"
         android:textColor="@color/white"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Pharmacy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +61,7 @@
         android:textColor="@color/white"
         android:onClick="onClick"
         android:padding="12dp"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Hospitals"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +74,7 @@
         android:id="@+id/B_policeStation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/dm_sans_black"
         android:background="@drawable/button_background"
         android:onClick="onClick"
         android:padding="12dp"
