--- a/app/src/main/res/layout/emergencyservices.xml
+++ b/app/src/main/res/layout/emergencyservices.xml
@@ -12,6 +12,7 @@
         android:layout_width="285dp"
         android:layout_height="594dp"
         android:textColor="@color/white"
+        android:fontFamily="@font/dm_sans_semibold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
@@ -26,12 +27,13 @@
         android:layout_marginTop="16dp"
         android:text="Emergency Services"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="28sp"
+        android:fontFamily="@font/dm_sans_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.016" />
 
     <Button
         android:id="@+id/buttonHome"
