--- a/app/src/main/res/layout/forgot_password_dialog.xml
+++ b/app/src/main/res/layout/forgot_password_dialog.xml
@@ -8,6 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/dm_sans_black"
         android:text="Forgot Password"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -17,6 +18,10 @@
     <EditText
         android:id="@+id/emailInput"
         android:layout_width="match_parent"
+        android:background="@drawable/edittexttheme"
+        android:gravity="center"
+        android:fontFamily="@font/dm_sans_black"
+        android:padding="12dp"
         android:layout_height="wrap_content"
         android:hint="Enter your email"
         android:layout_marginBottom="16dp"/>
@@ -24,6 +29,9 @@
     <Button
         android:id="@+id/btnResetPassword"
         android:layout_width="match_parent"
+        android:background="@drawable/login_button"
+        android:textColor="@color/white"
+        android:fontFamily="@font/dm_sans_black"
         android:layout_height="wrap_content"
         android:text="Reset Password"/>
 </LinearLayout>
