--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -14,6 +14,7 @@
         android:layout_height="19dp"
         android:text="Medicine Name"
         android:gravity="center"
+        android:fontFamily="@font/dm_sans_black"
         android:textSize="14sp"
         android:background="@drawable/edittexttheme"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,6 +31,7 @@
         android:background="@drawable/edittexttheme"
         android:gravity="center"
         android:text="Timings"
+        android:fontFamily="@font/dm_sans_semibold"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
